--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -14,6 +14,6 @@
 
 
 
-    <a href="C:\Users\Brandon\Documents\Atom Projects\HTML PROJECTS\ToDoList.html"><h1>HELLO WORLD 2.0</h1></a>
+    <a href="M4GICB.github.io\HelloWord-v2.html"><h1>HELLO WORLD 2.0</h1></a>
   </body>
 </html>
