Fixing clock.js path

--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\MyClock2.css">
 			<link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\Settings.css">
 			<link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\ColorPicker.css">
-      <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\MyClock2.js" charset="utf-8"></script>
+      <script src="MyClockProject\js\MyClock2.js" charset="utf-8"></script>
       <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\Settings.js" charset="utf-8"></script>
       <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\ClockBackgroundCP.js" charset="utf-8"></script>
       <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\ClockTextCP.js" charset="utf-8"></script>
