--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -3,13 +3,13 @@
 		<head>
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<title>My Clock 2</title>
-      <link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\MyClock2.css">
-			<link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\Settings.css">
-			<link rel="stylesheet" href="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\css\ColorPicker.css">
+      <link rel="stylesheet" href="MyClockProject\css\MyClock2.css">
+			<link rel="stylesheet" href="MyClockProject\css\Settings.css">
+			<link rel="stylesheet" href="MyClockProject\css\ColorPicker.css">
       <script src="MyClockProject\js\MyClock2.js" charset="utf-8"></script>
-      <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\Settings.js" charset="utf-8"></script>
-      <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\ClockBackgroundCP.js" charset="utf-8"></script>
-      <script src="C:\Users\Brandon\Documents\Atom Projects\MyClockProject\js\ClockTextCP.js" charset="utf-8"></script>
+      <script src="MyClockProject\js\Settings.js" charset="utf-8"></script>
+      <script src="MyClockProject\js\ClockBackgroundCP.js" charset="utf-8"></script>
+      <script src="MyClockProject\js\ClockTextCP.js" charset="utf-8"></script>
 			<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 
