fixing clock link v2

--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -16,6 +16,6 @@
 
     <a href="M4GICB.github.io\HelloWord-v2.html"><h1>HELLO WORLD 2.0</h1></a>
 
-    <a href="M4GICB.github.io\MyClockProject\MyClock2.html">Clock Project</a>
+    <a href="https://m4gicb.github.io/MyClockProject/MyClock2.html">Clock Project</a>
   </body>
 </html>
