--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -9,7 +9,7 @@
       <script src="MyClockProject\js\MyClock2.js" charset="utf-8"></script>
       <script src="MyClockProject\js\Settings.js" charset="utf-8"></script>
       <script src="MyClockProject\js\ClockBackgroundCP.js" charset="utf-8"></script>
-      <script src="MyClockProject\js\ClockTextCP.js" charset="utf-8"></script>
+      <script src="\js\ClockTextCP.js" charset="utf-8"></script>
 			<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 
