--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -3,13 +3,13 @@
 		<head>
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<title>My Clock 2</title>
-      <link rel="stylesheet" href="/css/MyClock2.css">
-			<link rel="stylesheet" href="/css/Settings.css">
-			<link rel="stylesheet" href="/css/ColorPicker.css">
-      <script src="/js/MyClock2.js" charset="utf-8"></script>
-      <script src="/js/Settings.js" charset="utf-8"></script>
-      <script src="/js/ClockBackgroundCP.js" charset="utf-8"></script>
-      <script src="/js/ClockTextCP.js" charset="utf-8"></script>
+      <link rel="stylesheet" href="css/MyClock2.css">
+			<link rel="stylesheet" href="css/Settings.css">
+			<link rel="stylesheet" href="css/ColorPicker.css">
+      <script src="js/MyClock2.js" charset="utf-8"></script>
+      <script src="js/Settings.js" charset="utf-8"></script>
+      <script src="js/ClockBackgroundCP.js" charset="utf-8"></script>
+      <script src="js/ClockTextCP.js" charset="utf-8"></script>
 			<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 
