--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<title>My Clock 2</title>
-      <link rel="stylesheet" href="MyClockProject/css/MyClock2.css">
+      <link rel="stylesheet" href="/css/MyClock2.css">
 			<link rel="stylesheet" href="MyClockProject/css/Settings.css">
 			<link rel="stylesheet" href="MyClockProject/css/ColorPicker.css">
       <script src="MyClockProject/js/MyClock2.js" charset="utf-8"></script>
