--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -4,12 +4,12 @@
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<title>My Clock 2</title>
       <link rel="stylesheet" href="https://M4GICB.github.io/MyClockProject/css/MyClock2.css">
-			<link rel="stylesheet" href="MyClockProject/css/Settings.css">
-			<link rel="stylesheet" href="MyClockProject/css/ColorPicker.css">
-      <script src="MyClockProject/js/MyClock2.js" charset="utf-8"></script>
-      <script src="MyClockProject/js/Settings.js" charset="utf-8"></script>
-      <script src="MyClockProject/js/ClockBackgroundCP.js" charset="utf-8"></script>
-      <script src="MyClockProject/js/ClockTextCP.js" charset="utf-8"></script>
+			<link rel="stylesheet" href="https://M4GICB.github.io/MyClockProject/css/Settings.css">
+			<link rel="stylesheet" href="https://M4GICB.github.io/MyClockProject/css/ColorPicker.css">
+      <script src="https://M4GICB.github.io/MyClockProject/js/MyClock2.js" charset="utf-8"></script>
+      <script src="https://M4GICB.github.io/MyClockProject/js/Settings.js" charset="utf-8"></script>
+      <script src="https://M4GICB.github.io/MyClockProject/js/ClockBackgroundCP.js" charset="utf-8"></script>
+      <script src="https://M4GICB.github.io/MyClockProject/js/ClockTextCP.js" charset="utf-8"></script>
 			<script src="https://unpkg.com/draggabilly@2/dist/draggabilly.pkgd.min.js"></script>
 
 
