Removal of time format button

--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -109,6 +109,7 @@
 				    </div>
 				    <!-- END TEXT COLOR PICKER DIV -->
 
+						<br>
 
 						<!-- SECOND SETTINGS OPTION -->
 						<div class="SettingOption">
@@ -121,7 +122,9 @@
 							<!-- END COLOR PICKER TOGGLE SWITCH -->
 						</div>
 						<!-- END SECOND SETTINGS OPTION -->
-						<button id="switch" type="button" name="timeFormatToggle"> Change Time Format </button>
+
+						<!-- Commenting this button out because its functionality was replaced with a slider instead. -->
+						<!-- <button id="switch" type="button" name="timeFormatToggle"> Change Time Format </button> -->
 					</center>
 			  </div>
 				<!-- END MODAL WINDOW DIV -->
