--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -25,7 +25,7 @@
 			  <div class="modal-content">
 			    <span class="close">&times;</span>
 					<center>
-				    <h1>SETTINGS</h1>
+				    <h1 id="settingsHeader">SETTINGS</h1>
 
 						<!-- FIRST SETTINGS OPTION -->
 						<div class="SettingOption">
