--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -146,6 +146,10 @@
 
 					<br><br>
 
+					<button id="settingsBTN" type="button" name="button"> CALENDAR </button>
+
+					<br><br>
+
 					<p id="currentTimeFormat"> Current Time Format: </p>
 
 				</center>
