--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -146,7 +146,7 @@
 
 					<br><br>
 
-					<button id="settingsBTN" type="button" name="button"> CALENDAR </button>
+					<button id="calendarBTN" type="button" name="button"> CALENDAR </button>
 
 					<br><br>
 
