Calendar Modal Window Draggability
Modified Settings.css Settings.js and clock.html to add dragging capabilities to the calendar modal window.

--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -130,7 +130,7 @@
 
 			<!-- Trigger/Open The Modal -->
 			<!-- The Modal -->
-			<div id="myCalendarModal" class="modal">
+			<div id="myCalendarModal" class="CalendarModal">
 				<!-- Modal content -->
 				<div class="modal-content">
 					<span class="closeCalendar">&times;</span>
