Change Today Color in Calendar and Resize Calendar
Modifications to change the color for Today's date cell in the calendar and make the calendar smaller and more condensed/uniform.

--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -132,7 +132,7 @@
 			<!-- The Modal -->
 			<div id="myCalendarModal" class="CalendarModal">
 				<!-- Modal content -->
-				<div class="modal-content">
+				<div class="CalendarModal-content">
 					<span class="closeCalendar">&times;</span>
 					<center>
 						<h1>CALENDAR</h1>
@@ -152,13 +152,13 @@
 						<!-- Calendar table -->
 						<table id="CalendarTable" border="0" align="center" width=50%>
 							<tr id="DaysOfWeekRow">
-								<th width=14.29% >Sunday</th>
-								<th width=14.29% >Monday</th>
-								<th width=14.29% >Tuesday</th>
-								<th width=14.29% >Wednesday</th>
-								<th width=14.29% >Thurasday</th>
-								<th width=14.29% >Friday</th>
-								<th width=14.29% >Saturday</th>
+								<th width=14.29% >Su</th>
+								<th width=14.29% >Mo</th>
+								<th width=14.29% >Tu</th>
+								<th width=14.29% >We</th>
+								<th width=14.29% >Th</th>
+								<th width=14.29% >Fr</th>
+								<th width=14.29% >Sa</th>
 							</tr>
 							<tr id="row0">
 								<td id="RC00"> </td>
