Removal of Change Time Format Button

--- a/MyClockProject/MyClock2.html
+++ b/MyClockProject/MyClock2.html
@@ -122,7 +122,7 @@
 							<!-- END COLOR PICKER TOGGLE SWITCH -->
 						</div>
 						<!-- END SECOND SETTINGS OPTION -->
-						<button id="switch" type="button" name="timeFormatToggle"> Change Time Format </button>
+						<!-- <button id="switch" type="button" name="timeFormatToggle"> Change Time Format </button> -->
 					</center>
 			  </div>
 				<!-- END MODAL WINDOW DIV -->
